small fix for horizontal scrollbars in extensible panels

--- a/_sass/hydeout/_collapsible.scss
+++ b/_sass/hydeout/_collapsible.scss
@@ -85,6 +85,7 @@
     color: #555;
     margin: 0px;
     overflow-y: scroll;
+    overflow-x: scroll;
     height: 10rem;
 }
 .collapse-panel div input:checked ~ div.extensible-content{
